# cmake-unity-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  main.c
module_a/: CMakeLists.txt  module_a.c  module_a.h
test/: CMakeLists.txt
test/suite_1/: CMakeLists.txt  suite_1.c
